# heigit-disaster-portal

./: .env  .env-dev  .env-sample  .gitignore  README.md  docker-compose.reload.yml  docker-compose.yml  pyproject.toml
dap_api/: Dockerfile
dap_api/app/: .coverage  debug.py  log_config.yml  prestart.sh  pyproject.toml  start-reload.sh  start.sh
dap_api/app/alembic/: README  README.md  env.py
dap_api/app/alembic/versions/: 1accb4baabfc_add_custom_speeds_table.py  2fa00d59041d_create_move_default_create_index.py  2ff9aa36b88c_init.py  38f87d7065af_add_disaster_areas.py  9683b9c7b361_add_area_column.py  9e9c67334499_convert_d_area_geom_column_to_.py  d810a2163028_update_tables.py
dap_api/app/app/: config.py  logger.py  main.py  security.py
dap_api/app/app/adapters/: __init__.py  base.py
dap_api/app/app/adapters/copernicus_ems/: __init__.py  adapter.py  api.py  schemas.py
dap_api/app/app/api/: deps.py
dap_api/app/app/api/api_v1/: api.py
dap_api/app/app/api/api_v1/endpoints/: custom_speeds.py  disaster_areas.py  disaster_sub_types.py  disaster_types.py  ors_connector.py  providers.py  users.py
dap_api/app/app/backend/: base.py  geoutil.py  ors_processor.py
dap_api/app/app/crud/: __init__.py  base.py  crud_custom_speeds.py  crud_disaster_area.py  crud_disaster_sub_type.py  crud_disaster_type.py  crud_provider.py  crud_user.py
dap_api/app/app/db/: base.py  import_models.py  init_db.py  pre_start.py  session.py
dap_api/app/app/db/init_data/: d_types.json  users.json
dap_api/app/app/models/: __init__.py  custom_speeds.py  disaster_areas.py  disaster_sub_type.py  disaster_type.py  provider.py  user.py
dap_api/app/app/schemas/: __init__.py  custom_speeds.py  disaster_area.py  disaster_sub_type.py  disaster_type.py  ors_request.py  provider.py  user.py  utils.py
dap_api/app/app/templates/: index.html
dap_api/app/app/tests/: .coverage  conftest.py  prestart_test_db.py  test_landing_page.py
dap_api/app/app/tests/api/api_v1/: test_custom_speeds.py  test_disaster_areas.py  test_disaster_sub_types.py  test_disaster_types.py  test_providers.py  test_routing.py  test_security.py  test_users.py
dap_api/app/app/tests/backend/: test_geoutil.py  test_ors_processor.py  util_test_data.py
dap_api/app/app/tests/crud/: test_custom_speeds.py  test_disaster_area.py  test_disaster_sub_type.py  test_disaster_type.py  test_provider.py  test_user.py
dap_api/app/app/tests/crud/disaster_area/multi_polygon/: test_multi_polygon_areas.py
dap_api/app/app/tests/utils/: custom_speeds.py  disaster_areas.py  overrides.py  provider.py  test_db.py  utils.py
dap_db/: Dockerfile
docs/: index.md  transcription.md
docs/img/: polygon_drawing.webm
